# frameworks_runtimes_typescript_ts2wasm

./: .eslintignore  .eslintrc.json  .gitignore  .gitmodules  .mocharc.json  .prettierignore  ATTRIBUTIONS.md  CMakeLists.txt  Jenkinsfile  Kconfig  README.md  package-lock.json  package.json  tsconfig.json
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: libdyntype-ci.yaml  libdyntype_ci.yaml  ts2wasm-ci.yaml  ts2wasm_ci.yaml
cli/: options.json  ts2wasm.ts
config/: config_mgr.ts  log4js.ts
doc/: add_builtin_function.md  additonal_sematic_check.md  any_dataflow.md  builtin_console_log_design.md  builtin_functions_design.md  closure_design.md  libdyntype_api_spec.md  name_mangling_rules.md  namespace_scope.md  property_access.md  run_generated_module.md  scope_tree.md  start_function.md  validation_strategy.md  variable_index_assignment.md
doc/developer-guide/: class.md  feature_list.md  index.md  ts2wasm_feature_list.md
doc/developer-guide/concepts/: any_object.md  types.md
doc/standard-library/: array.md  console.md  index.md  math.md  string.md
lib/: envInit.ts
lib/builtin/: addBuiltIn.ts  builtinUtil.ts  builtin_name.ts  initBuiltInAPI.ts  initBuiltInTS.ts  lib.type.d.ts  lib_builtin.ts  stringBuiltin.ts  utils.ts
lib/builtin/tsFile/: Array.ts  Lib_array.ts  Lib_string.ts  Math.ts
lib/dyntype/: 0001-patch.patch  CMakeLists.txt  README.md  dyntype.c  dyntype.h  lib_dyntype_wrapper.c  utils.ts
lib/dyntype/test/: CMakeLists.txt  object_property_test.cc  operator_test.cc  prototype_test.cc  test.c
lib/interface-lib/: itable.c  itable.wat
runtime-library/: CMakeLists.txt  main.c  wamr_config.cmake
runtime-library/dyntype/: CMakeLists.txt  README.md  dyntype.c  dyntype.h  lib_dyntype_wrapper.c
runtime-library/dyntype/test/: CMakeLists.txt  dump.cc  object_property_test.cc  operator_test.cc  types_test.cc
runtime-library/libdyntype/test/: test_app.h
runtime-library/stdlib/: lib_array.c  lib_console.c  lib_timer.c
runtime-library/struct-dyn/: CMakeLists.txt  lib_structdyn.c
runtime-library/utils/: type_utils.c  type_utils.h
scripts/: link-hooks.ts  link_hooks.ts
scripts/gdb/: wamr_objects.py  wamr_types.py
src/: base.ts  checker.ts  compiler.ts  declaration.ts  envInit.ts  error.ts  expression.ts  frontend.ts  import_resolve.ts  literal.ts  log.ts  memory.ts  module.ts  prototype.ts  scope.ts  semantic_check.ts  sematicCheck.ts  statement.ts  test.ts  type.ts  utils.ts  variable.ts  wasmExprGen.ts  wasmGen.ts  wasmStmtGen.ts  wasmTypeGen.ts  wasmgen.ts
src/backend/: index.ts
src/backend/binaryen/: index.ts  memory.ts  (+4 more)
src/glue/: binaryen.d.ts  binaryen.js  packType.ts  transform.ts  utils.ts
src/semantics/: builder_context.ts  builtin.ts  expression_builder.ts  flatten.ts  index.ts  predefined_types.ts  runtime.ts  semantics_nodes.ts  statement_builder.ts  type_creator.ts  value.ts  value_types.ts
test/: mocha.spec.ts
test/samples/: binary-expression-case1.ts  binary-expression-case10.ts  binary-expression-case11.ts  binary-expression-case13.ts  binary-expression-case15.ts  binary-expression-case16.ts  binary-expression-case17.ts  binary-expression-case2.ts  binary-expression-case22.ts  binary-expression-case23.ts  binary-expression-case24.ts  binary-expression-case25.ts  binary-expression-case26.ts  binary-expression-case27.ts  binary-expression-case28.ts  binary-expression-case29.ts  binary-expression-case30.ts  binary-expression-case31.ts  binary-expression-case6.ts  binary-expression-case8.ts  binary-expression-case9.ts  call-expression-case1.ts  call-expression-case3.ts  call-expression-case5.ts  call-expression-case6.ts  call-expression-function-hoisting-case1.ts  do-statement-case1.ts  do-statement-case2.ts  do-statement-case3.ts  do-statement.ts  for-statement-case1.ts  for-statement-case3.ts  for-statement.ts  function-declaration-case1.ts  function-declaration-case3.ts  function-declaration-case4.ts  function-declaration-case5.ts  function-declaration-case6.ts  function-declaration.ts  function-expression-case1.ts  (+15 more)
test/unit/: scope.test.ts
tests/: mocha.test.ts
tests/benchmark/: mandelbrot.js  mandelbrot.ts  run.sh  spectral_norm.js  spectral_norm.ts
tests/integration/: any-case1.ts  complexType-case2.ts  primitiveType-case2.ts  scopeScanner-case5.ts
tests/samples/: Infc-case10.ts  Math-builtin-case1.ts  any-case1.ts  any-case10.ts  any-case11.ts  any-case12.ts  any-case13.ts  any-case14.ts  any-case15.ts  any-case16.ts  any-case17.ts  any-case18.ts  any-case19.ts  any-case2.ts  any-case20.ts  any-case21.ts  any-case22.ts  any-case23.ts  any-case24.ts  any-case3.ts  any-case4.ts  any-case5.ts  any-case6.ts  any-case7.ts  any-case8.ts  any-case9.ts  any_binary_operation.ts  any_box_array.ts  any_func_call.ts  array-case1.ts  array-case10.ts  array-case11.ts  array-case12.ts  array-case13.ts  array-case14.ts  array-case15.ts  array-case16.ts  array-case17.ts  array-case18.ts  array-case19.ts  (+209 more)
tests/unit/: expression.test.ts  scope.test.ts  statement.test.ts  type.test.ts  variable.test.ts
tests/utils/: test_helper.ts
tools/module_gen/: load.js
ts2wasm/: .eslintignore  ATTRIBUTIONS.md  README.md  package-lock.json  package.json
ts2wasm/cli/: options.json  ts2wasm.ts
ts2wasm/doc/: additonal_sematic_check.md
ts2wasm/lib/: envInit.ts
ts2wasm/runtime-library/: CMakeLists.txt  main.c
ts2wasm/runtime-library/dyntype/: CMakeLists.txt  dyntype.c  dyntype.h  lib_dyntype_wrapper.c
ts2wasm/runtime-library/dyntype/test/: CMakeLists.txt  object_property_test.cc  types_test.cc
ts2wasm/runtime-library/stdlib/: lib_array.c  lib_console.c  utils.c  utils.h
ts2wasm/runtime-library/struct-dyn/: lib_structdyn.c
ts2wasm/runtime-library/utils/: type_utils.c  type_utils.h
ts2wasm/scripts/: link_hooks.ts
ts2wasm/src/: expression.ts  frontend.ts  import_resolve.ts  log.ts  scope.ts  semantic_check.ts  statement.ts  type.ts  utils.ts  variable.ts
(+150 files in other folders)
